--- a/ProposalGroup045-Sp22.ipynb
+++ b/ProposalGroup045-Sp22.ipynb
@@ -44,11 +44,11 @@
     "\n",
     "Hopefully your team is at least this good. Obviously you should replace these with your names.\n",
     "\n",
-    "- Pelé\n",
-    "- Diego Maradonna\n",
-    "- Johan Cruyff\n",
-    "- Roberto Carlos\n",
-    "- Franz Beckenbaur"
+    "- Bohan Lei\n",
+    "- Zheran Li\n",
+    "- Ryan Choi\n",
+    "- Yiyao Liu\n",
+    "- Duye Liu\n"
    ]
   },
   {
@@ -56,11 +56,7 @@
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
-    "- what your goal/problem is\n",
-    "- what the data used represents and how they are measured\n",
-    "- what you will be doing with the data\n",
-    "- how performance/success will be measured"
+    "Our goal in this project is to build prediction models that predict whether or not someone has heart disease based on their health status and ethnographic data. We will clean the 2020 CDC survey data of 400k adults and choose the features from HeartDisease, BMI, Smoking, AlcoholDrinking, Stroke, PhysicalHealth, DiffWalking, Sex, AgeCategory, Race, Diabetic, PhysicalActivity, GenHealth, SleepTime, Asthma, KidneyDisease, and SkinCancer. We will train models including KNN, Decision tree, decision boundaries, and compare their performance primarily indicated by their classification accuracy. "
    ]
   },
   {
@@ -69,11 +65,9 @@
    "source": [
     "# Background\n",
     "\n",
-    "Fill in the background and discuss the kind of prior work that has gone on in this research area here. **Use inline citation** to specify which references support which statements.  You can do that through HTML footnotes (demonstrated here). I used to reccommend Markdown footnotes (google is your friend) because they are simpler but recently I have had some problems with them working for me whereas HTML ones always work so far. So use the method that works for you, but do use inline citations.\n",
+    "One study that is similar to our project objective is using a machine learning model for predicting out-of-hospital cardiac arrests based on meteorological and chronological data. In this study, the researches used eXtreme Gradient Boosting algorithm to generate a model that predict daily Out-of-hospital cardiac arrest based on  OHCA nationwide registry and high-resolution meteorological and chronological datasets from Japan<a name=\"ha1\"></a>[<sup>[1]</sup>](#ha1note). Their result have shown that combining meteorological and chronological variables in the machine learning model have the best predictive accuracy in both the training and testing datasets<a name=\"ha1\"></a>[<sup>[2]</sup>](#ha1note). Their research outcome have also indicated that factors like holiday, weekend,  low ambient temperature, and large interday or intraday temperature difference are strongly associated out-of-hospital cardiac arrest<a name=\"ha1\"></a>[<sup>[3]</sup>](#ha1note).  \n",
     "\n",
-    "Here is an example of inline citation. After government genocide in the 20th century, real birds were replaced with surveillance drones designed to look just like birds<a name=\"lorenz\"></a>[<sup>[1]</sup>](#lorenznote). Use a minimum of 2 or 3 citations, but we prefer more <a name=\"admonish\"></a>[<sup>[2]</sup>](#admonishnote). You need enough citations to fully explain and back up important facts. \n",
-    "\n",
-    "Remeber you are trying to explain why someone would want to answer your question or why your hypothesis is in the form that you've stated. "
+    "Similarly, a recent study done by the Cedars-Sinai Artificial Intelligence in Medicine division<a name=\"sota\"></a>[<sup>[4]</sup>](#sotanote) found that by combining  CTA and F-NaF PET , two advanced imaging techniques together, the team was able to develop machine learning models that improve the prediction of heart attacks. The team took data from 293 patients from the ages of 56 - 74 years in the span of 53 month, and created three models to predict the possibility of future heart attacks<a name=\"sota\"></a>[<sup>[5]</sup>](#sotanote). By comparing with the other two models they developed based on baseline characteristics and the quantitative plaque analysis variables from CTA, they found that the model that combines CTA and F-NaF PET produce the most accurate result<a name=\"sota\"></a>[<sup>[6]</sup>](#sotanote).\n"
    ]
   },
   {
@@ -82,7 +76,7 @@
    "source": [
     "# Problem Statement\n",
     "\n",
-    "Clearly describe the problem that you are solving. Avoid ambiguous words. The problem described should be well defined and should have at least one ML-relevant potential solution. Additionally, describe the problem thoroughly such that it is clear that the problem is quantifiable (the problem can be expressed in mathematical or logical terms), measurable (the problem can be measured by some metric and clearly observed), and replicable (the problem can be reproduced and occurs more than once)."
+    "According to the CDC and WHO, heart disease is the most common cause of death in the world, responsible for 16% of total deaths. There are some common key risk factors that could increase one’s chance of getting a heart disease including, but not limited to, high blood pressure, high cholesterol, physical inactivity, and smoking. Understanding what key risk factors lead to heart disease and avoiding them will make it much easier to prevent getting a heart disease. The original data given by kaggle contains 401,958 rows and 279 columns where each column corresponds to different factors that could lead to heart attack (questions on survey) and each row corresponds to values (answers for questions). Using this dataset, one could apply machine learning algorithms such as Decision Trees and KNN to detect patterns within the data, which will help us to understand which factors have the least/greatest impact on heart disease. Then, doctors could advise people who have a high chance of getting a heart attack (e.g. family history) what actions to take to lower their chance of getting a heart disease.  "
    ]
   },
   {
@@ -91,16 +85,10 @@
    "source": [
     "# Data\n",
     "\n",
-    "You should have a strong idea of what dataset(s) will be used to accomplish this project. \n",
-    "\n",
-    "If you know what (some) of the data you will use are please give the following infomration for each dataset\n",
-    "- link/reference to obtain it\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "- what an observation consists of\n",
-    "- what some critical variables are, how they are represented\n",
-    "- any special handling, transformations, cleaning, etc will be needed\n",
-    "\n",
-    "If you don't yet know what your dataset(s) will be, you should be able to describe what you desire in terms of the above bullets"
+    "In this project, we use the Personal Key Indicators of Heart Disease Dataset. The link to the dataset is below: \n",
+    "https://www.kaggle.com/datasets/kamilpytlak/personal-key-indicators-of-heart-disease <br>\n",
+    "This dataset is based on the 2020 annual Center of Disease Control and Prevention (CDC) survey of around 400k adults related to their health status. The dataset has in total 18 variables and 320,000 observations. Each observation consists of the results of the 18 variables. The variables are: HeartDisease, BMI, Smoking, AlcoholDrinking, Stroke, PhysicalHealth, DiffWalking, Sex, AgeCategory, Race, Diabetic, PhysicalActivity, GenHealth, SleepTime, Asthma, KidneyDisease, and SkinCancer. \n",
+    "Since this dataset is clean enough, with no missing data, we don’t need to further do any data cleaning process. The most important variable is the HeartDisease variable, as that is the variable that we are going to predict by our model. We will use 1 to represent the result of “yes“， and 0 to “no”. This transformation will also be applied into other variables that contain only “yes” and “no”. This includes Smoking, AlcoholDrinking, Stroke, DiffWalking, Diabetic, PhysicalActivity, Asthma, KidneyDisease, and SkinCancer. Also, for sex, we denote 1 as “male” and 0 as “female”. For AgeCategory, since it will be hard for a model to predict a category, we will just use the starting age of the age group. For example, for category “75-79”, we will just replace it as 75. For race and general health, since there are too many categories, we will either use small numbers to represent each category, or use one-hot coding to transfer it into the numbers with 1 and 0. \n"
    ]
   },
   {
@@ -109,9 +97,7 @@
    "source": [
     "# Proposed Solution\n",
     "\n",
-    "In this section, clearly describe a solution to the problem. The solution should be applicable to the project domain and appropriate for the dataset(s) or input(s) given. Provide enough detail (e.g., algorithmic description and/or theoretical properties) to convince us that your solution is applicable. Make sure to describe how the solution will be tested.  \n",
-    "\n",
-    "If you know details already, describe how (e.g., library used, function calls) you plan to implement the solution in a way that is reproducible.\n",
+    "We plan to implement different machine learning algorithms including different types of classification algorithms. We make use of decision trees(random forest) algorithms, decision boundaries, and K Nearest Neighbor (KNN) on our cleaned data. Our model should be able to make good predictions about the possibility of an individual to have a heart attack given his medical data and records. Since we have over ten columns to consider we might need to reduce the size of data. We will first check the relations between each variable, and try to delete the most unrelated variables, If it still cannot reduce many columns, we will use Principal Component Analysis (PCA) to reduce dimensions. Our solution should be tested by either cross validation or just apply it onto our test dataset, since we have a very large dataset. At last we will try to compare our results with the existing methods in papers or other individual’s posted solutions on Kaggle to further validate the result.\n",
     "\n",
     "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
    ]
@@ -122,7 +108,7 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "Propose at least one evaluation metric that can be used to quantify the performance of both the benchmark model and the solution model. The evaluation metric(s) you propose should be appropriate given the context of the data, the problem statement, and the intended solution. Describe how the evaluation metric(s) are derived and provide an example of their mathematical representations (if applicable). Complex evaluation metrics should be clearly defined and quantifiable (can be expressed in mathematical or logical terms)."
+    "We consider the classification accuracy to be the most important performance measure of our model. So we will use classification accuracy as our evaluation metrics. By comparing the accuracy of both models we will get a straightforward result of which model is better. The classification accuracy is derived by dividing the correct prediction result by the total number of predictions we make and it is one of the most common evaluation methods for machine learning models."
    ]
   },
   {
@@ -136,11 +122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your project has obvious potential concerns with ethics or data privacy discuss that here.  Almost every ML project put into production can have ethical implications if you use your imagination. Use your imagination.\n",
-    "\n",
-    "Even if you can't come up with an obvious ethical concern that should be addressed, you should know that a large number of ML projects that go into producation have unintended consequences and ethical problems once in production. How will your team address these issues?\n",
-    "\n",
-    "Consider a tool to help you address the potential issues such as https://deon.drivendata.org"
+    "The ethics problem is divided into 5 phases: data collection phase, data storage phase, data analysis phase, data modeling phase, and deployment phase. <br>\n",
+    "For the data collection phase, since this dataset was collected by CDC and published for public use, we can assume the collecting agency was held to official standards. We can assume that it could represent the population in the US, and it does not have a strong collecting bias. <br>\n",
+    "For the data storage phase, first of all, since this is a public data collection, we do not need to consider the data privacy problem. Also, since this is the data collected in 2020, we also do not need to be concerned about the problem of the updated data, since the update was already fixed. <br>\n",
+    "For the data analysis phase, the data itself could lead to some kind of biases against a specific group of people. We will try our best to reduce such biases by doing visualizations and observations to supervise the learning process. <br>\n",
+    "For the data modeling phase, the models we generate might also have prediction bias against specific groups of data. We will make use of the best unbiased model for our prediction to suppress such bias. <br>\n",
+    "For the deployment phase, some of our models might be used for future prediction which generate prediction bias. We will address this problem at the end of our model build. <br>\n"
    ]
   },
   {
@@ -154,11 +141,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put things here that cement how you will interact/communicate as a team, how you will handle conflict and difficulty, how you will handle making decisions and setting goals/schedule, how much work you expect from each other, how you will handle deadlines, etc...\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "- Be on time for meetings\n",
+    "- Respond to messages on Discord\n",
+    "- Finish assigned tasks on time, seek help if needed\n",
+    "- Divide tasks evenly\n",
+    "- Ask on the group chat before any changes are made\n"
    ]
   },
   {
@@ -172,16 +159,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Replace this with something meaningful that is appropriate for your needs. It doesn't have to be something that fits this format.  It doesn't have to be set in stone... \"no battle plan survives contact with the enemy\". But you need a battle plan nonetheless, and you need to keep it updated so you understand what you are trying to accomplish, who's responsible for what, and what the expected due dates are for each item.\n",
+    "We will basically meet every week on Thursday night, but the meeting time is flexible if anyone has timeline problems. We will basically first finish the project proposal, and start to wrangle and explore the dataset in our notebook. After getting feedback from the proposal, we will start to implement algorithms and models into the dataset, and compare the results of them. After that, we will start to write the final report. The specific timeline is shown below. \n",
     "\n",
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM |  Brainstorm topics/questions (all)  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic (Pelé) | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets (Beckenbaur)  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data ,do some EDA (Maradonna) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin programming for project (Cruyff) | Discuss/edit project code; Complete project |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Carlos)| Discuss/edit full project |\n",
+    "| 4/18  |  8 PM |  Brainstorm topics/questions   | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 4/23  |  5 PM | Finish the proposal by part  |Final check the project proposal| \n",
+    "| 4/28  | 8 PM  | Explore the dataset and find the possibility to wrangle the data |Start the coding part of the project, finish data cleaning, data wrangling, EDAs |\n",
+    "| 5/5  | 8 PM  | Try to find the different ways to implement the algorithms | Each member picks a part for the  implementation of the algorithms into the dataset|\n",
+    "| 5/12  | 8 PM  | Finish the algorithms code| Compare the results of algorithms, discuss the problems we met, and start to write the final project report (if applicable)|\n",
+    "| 5/19  | 8 PM  | Start to write the final report and organize the results| Discuss/edit full project |\n",
+    "| 5/26  | 8 PM  | Finish the final report by part| Discuss problems we have on either the coding or the report |\n",
+    "| 6/2   | 8 PM  | Finish everything and prepare for submission| Final check all the stuffs |\n",
     "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project  |"
    ]
   },
@@ -190,9 +179,9 @@
    "metadata": {},
    "source": [
     "# Footnotes\n",
-    "<a name=\"lorenznote\"></a>1.[^](#lorenz): Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html<br> \n",
-    "<a name=\"admonishnote\"></a>2.[^](#admonish): Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.<br>\n",
-    "<a name=\"sotanote\"></a>3.[^](#sota): Perhaps the current state of the art solution such as you see on [Papers with code](https://paperswithcode.com/sota). Or maybe not SOTA, but rather a standard textbook/Kaggle solution to this kind of problem\n"
+    "<a name=\"ha1note\"></a>1.[^](#ha1): https://heart.bmj.com/content/107/13/1084<br> \n",
+    "\n",
+    "<a name=\"sotanote\"></a>2.[^](#sota): https://physicsworld.com/a/machine-learning-and-advanced-imaging-improve-prediction-of-heart-attacks/\n"
    ]
   },
   {
@@ -205,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
