--- a/ProposalGroup045-Sp22.ipynb
+++ b/ProposalGroup045-Sp22.ipynb
@@ -11,24 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Description\n",
-    "\n",
-    "You will design and execute a machine learning project. There are a few constraints on the nature of the allowed project. \n",
-    "- The problem addressed will not be a \"toy problem\" or \"common training students problem\" like mtcars, iris, palmer penguins etc.\n",
-    "- The dataset will have >1k observations and >5 variables. I'd prefer more like >10k observations and >10 variables. A general rule is that if you have >100x more observations than variables, your solution will likely generalize a lot better. The goal of training a supervised machine learning model is to learn the underlying pattern in a dataset in order to generalize well to unseen data, so choosing a large dataset is very important.\n",
-    "\n",
-    "- The project will include a model selection and/or feature selection component where you will be looking for the best setup to maximize the performance of your ML system.\n",
-    "- You will evaluate the performance of your ML system using more than one appropriate metric\n",
-    "- You will be writing a report describing and discussing these accomplishments\n",
-    "\n",
-    "\n",
-    "Feel free to delete this description section when you hand in your proposal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Peer Review\n",
     "\n",
     "You will all have an opportunity to look at the Project Proposals of other groups to fuel your creativity and get more ideas for how you can improve your own projects. \n",
@@ -85,7 +67,7 @@
    "source": [
     "# Data\n",
     "\n",
-    "In this project, we use the Personal Key Indicators of Heart Disease Dataset. The link to the dataset is below: \n",
+    "In this project, we use the Personal Key Indicators of Heart Disease Dataset. The link to the dataset is below: <br>\n",
     "https://www.kaggle.com/datasets/kamilpytlak/personal-key-indicators-of-heart-disease <br>\n",
     "This dataset is based on the 2020 annual Center of Disease Control and Prevention (CDC) survey of around 400k adults related to their health status. The dataset has in total 18 variables and 320,000 observations. Each observation consists of the results of the 18 variables. The variables are: HeartDisease, BMI, Smoking, AlcoholDrinking, Stroke, PhysicalHealth, DiffWalking, Sex, AgeCategory, Race, Diabetic, PhysicalActivity, GenHealth, SleepTime, Asthma, KidneyDisease, and SkinCancer. \n",
     "Since this dataset is clean enough, with no missing data, we don’t need to further do any data cleaning process. The most important variable is the HeartDisease variable, as that is the variable that we are going to predict by our model. We will use 1 to represent the result of “yes“， and 0 to “no”. This transformation will also be applied into other variables that contain only “yes” and “no”. This includes Smoking, AlcoholDrinking, Stroke, DiffWalking, Diabetic, PhysicalActivity, Asthma, KidneyDisease, and SkinCancer. Also, for sex, we denote 1 as “male” and 0 as “female”. For AgeCategory, since it will be hard for a model to predict a category, we will just use the starting age of the age group. For example, for category “75-79”, we will just replace it as 75. For race and general health, since there are too many categories, we will either use small numbers to represent each category, or use one-hot coding to transfer it into the numbers with 1 and 0. \n"
