--- a/FinalProject_group045_unfinished.ipynb
+++ b/FinalProject_group045_unfinished.ipynb
@@ -27,14 +27,8 @@
    "metadata": {},
    "source": [
     "# Abstract \n",
-    "This section should be short and clearly stated. It should be a single paragraph <200 words.  It should summarize: \n",
     "\n",
-    "    Our goal in this project is to build prediction models that predict whether or not someone has heart disease based on their health status and ethnographic data. We cleaned the 2020 CDC survey data of 400k adults and choose the features including Smoking, Stroke, PhysicalHealth, DiffWalking, AgeCategory,Diabetic, PhysicalActivity, GenHealth, and KidneyDisease. We split the data into training and testing set, and used gridsearch with four algorithms (Logistic Regression, KNN, Decision Tree, Random Forest) to find four sets of best hyperparameters. We compared the results on the test set, and used a 10-fold cross validation to further select the best model. Among the four, \n",
-    "    \n",
-    "\n",
-    "- major results you came up with (mention how results are measured) \n",
-    "\n",
-    "__NB:__ this final project form is much more report-like than the proposal and the checkpoint. Think in terms of writing a paper with bits of code in the middle to make the plots/tables"
+    "   Our goal in this project is to build prediction models that predict whether or not someone has heart disease based on their health status and ethnographic data. We cleaned the 2020 CDC survey data of 400k adults and choose the features including Smoking, Stroke, PhysicalHealth, DiffWalking, AgeCategory,Diabetic, PhysicalActivity, GenHealth, and KidneyDisease. We split the data into training and testing set, and used gridsearch with four algorithms (Logistic Regression, KNN, Decision Tree, Random Forest) to find four sets of best hyperparameters. We compared the results on the test set, using accuracy and recall as evaluation metrics, and used a 10-fold cross validation to further select the best model, adding roc_auc_score as our metric. Among the four, we decide that best_logistic is the best model. It generates around 73.45% accuracy and has a roc for about 75.3%. \n"
    ]
   },
   {
@@ -850,9 +844,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Accuracy: 72.14 %\n",
+      "Standard Deviation: 0.39 %\n",
+      "Max Accuracy: 72.78 %\n",
+      "mean MSE across folds: 0.27860347983601885  standard deviation of  MSE across folds: 0.00387886124851526\n",
+      "mean roc across folds: 0.7534741129039446  standard deviation of  roc across folds: 0.006108827211943656\n"
+     ]
+    }
+   ],
    "source": [
     "# for Random Forest model\n",
     "k = KFold(n_splits=10, random_state=1, shuffle=True)\n",
@@ -882,7 +888,7 @@
     "\n",
     "### Interpreting the result\n",
     "\n",
-    "Based on the k-fold cross validation, we decide that XX is the best model. It generates XX% accuracy and has a roc for about XX%. \n",
+    "Based on the k-fold cross validation, we decide that best_logistic is the best model. It generates around 73.45% accuracy and has a roc for about 75.3%. \n",
     "\n",
     "OK, you've given us quite a bit of tech informaiton above, now its time to tell us what to pay attention to in all that.  Think clearly about your results, decide on one main point and 2-4 secondary points you want us to understand. Highlight HOW your results support those points.  You probably want 2-5 sentences per point.\n",
     "\n",
